# mcp-data-analyst

./: .gitignore  Dockerfile  README.md  create_sample_db.py  docker-compose.yml  pyproject.toml  requirements.txt  test_server.py
.github/workflows/: ci.yml
src/: db.py  logging_config.py  resources.py  server.py
src/tools/: query.py  visualize.py
tests/: conftest.py  test_db.py  test_resources.py  test_tools.py
